Register plugins as mixin containers on Neo